# hfdp

./: .gitignore  CMakeLists.txt  README.md
hfdp/: CMakeLists.txt  hfdp.cpp
hfdp/adapter/: AdapterDemo.cpp  AdapterDemo.hpp  Duck.hpp  DuckAdapter.cpp  DuckAdapter.hpp  MallardDuck.cpp  MallardDuck.hpp  Turkey.hpp  TurkeyAdapter.cpp  TurkeyAdapter.hpp  WildTurkey.cpp  WildTurkey.hpp
hfdp/app/: main.cpp
hfdp/command/: CeilingFan.cpp  CeilingFan.hpp  CeilingFanOffCommand.cpp  CeilingFanOffCommand.hpp  CeilingFanOnCommand.cpp  CeilingFanOnCommand.hpp  Command.hpp  CommandDemo.cpp  CommandDemo.hpp  Hottub.cpp  Hottub.hpp  HottubOffCommand.cpp  HottubOffCommand.hpp  HottubOnCommand.cpp  HottubOnCommand.hpp  Light.cpp  Light.hpp  LightOffCommand.cpp  LightOffCommand.hpp  LightOnCommand.cpp  LightOnCommand.hpp  MacroCommand.cpp  MacroCommand.hpp  NoCommand.cpp  NoCommand.hpp  RemoteControl.cpp  RemoteControl.hpp  Stereo.cpp  Stereo.hpp  StereoOffCommand.cpp  StereoOffCommand.hpp  StereoOnCommand.cpp  StereoOnCommand.hpp  StereoOnWithCDCommand.cpp  StereoOnWithCDCommand.hpp  TV.cpp  TV.hpp  TVOffCommand.cpp  TVOffCommand.hpp  TVOnCommand.cpp  (+1 more)
hfdp/common/: demo.hpp
hfdp/composite/: CompositeDemo.cpp  CompositeDemo.hpp  Menu.cpp  Menu.hpp  MenuComponent.cpp  MenuComponent.hpp  MenuItem.cpp  MenuItem.hpp  Waitress.cpp  Waitress.hpp
hfdp/decorator/: Beverage.cpp  Beverage.hpp  CondimentDecorator.cpp  CondimentDecorator.hpp  DarkRoast.cpp  DarkRoast.hpp  DecoratorDemo.cpp  DecoratorDemo.hpp  Espresso.cpp  Espresso.hpp  HouseBlend.cpp  HouseBlend.hpp  Mocha.cpp  Mocha.hpp  (+4 more)
(+211 files in other folders)
